refactor: conversations.kick

--- a/crates/slack_http_types/Cargo.toml
+++ b/crates/slack_http_types/Cargo.toml
@@ -11,3 +11,6 @@ version.workspace = true
 [dependencies]
 serde = { workspace = true }
 time = { workspace = true }
+reqwest = { workspace = true }
+url = { workspace = true }
+thiserror = { workspace = true }
