--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ serde = { version = "1.0", features = [ "derive" ] }
 serde_json = { version = "1.0" }
 config = { version = "0.14" }
 ring = { version = "0.17" }
-time = { version = "0.3" }
+time = { version = "0.3", features = [ "serde" ] }
 tracing = { version = "0.1" }
 url = { version = "2.5", features = [ "serde" ] }
 
